--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "bufferutil": "^3.0.2",
     "discord.js": "^11.1.0",
+    "file-system": "^2.2.2",
     "moment": "^2.18.1",
+    "opusscript": "0.0.3",
+    "path": "^0.12.7",
     "winston": "^2.3.1"
   },
   "devDependencies": {},
