Added starter code and loaded some file in bot.js

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,3 +1,4 @@
 {
-  "token": "MzQ0NTk0MTU0MDEwOTY4MDY0.DHJqOA.8Rc6tAwLws6ruh5v_Db-kZp7fMw"
+  "token": "MzQ0NTk0MTU0MDEwOTY4MDY0.DHJqOA.8Rc6tAwLws6ruh5v_Db-kZp7fMw",
+  "pf": "$"
 }
