--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bufferutil": "^3.0.2",
     "discord.js": "^11.1.0",
     "file-system": "^2.2.2",
+    "firebase": "^4.2.0",
     "moment": "^2.18.1",
     "opusscript": "0.0.3",
     "path": "^0.12.7",
