--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "bot.js",
   "dependencies": {
     "bufferutil": "^3.0.2",
+    "colors": "^1.1.2",
+    "dateformat": "^2.0.0",
     "discord.js": "^11.1.0",
     "file-system": "^2.2.2",
     "moment": "^2.18.1",
     "opusscript": "0.0.3",
-    "path": "^0.12.7",
-    "winston": "^2.3.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
